# rv32-interpreter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yaml  workflow.yaml
assets/: api.h  api.s  lib.h
cmake/: defaults.cmake  third_party.cmake  tools.cmake
include/: bit_utils.h  magic_enum_adapter.h  rvi.h  rvi_arg_parser.h  rvi_datatypes.h  rvi_elf.h  rvi_instruction_registry.h  rvi_instructions.h  rvi_logger.h  rvi_memory.h  rvi_opcodes.h  rvi_operands.h  rvi_state.h
include/rvi_instruction_sets/common/: arithmetics_template.h
include/rvi_instruction_sets/rv32f/: arithmetics.h  compare.h  config.h  conversion_move.h  fused_multiply_add.h  load_store.h  rv32f.h
include/rvi_instruction_sets/rv32i/: arithmetics.h  branches.h  jals.h  loads.h  misc_mems.h  rv32i.h  stores.h  systems.h
include/rvi_instruction_sets/rv32im/: div.h  mul.h  rv32im.h
include/rvi_instruction_sets/rv32m/: div.h  mul.h  rv32m.h
include/rvi_instruction_sets/rv32zbb/: bit_count.h  integer.h  logical.h  rotation.h  rv32zbb.h
source/: main.cpp  rvi.cpp  rvi_arg_parser.cpp  rvi_elf.cpp  rvi_instruction_registry.cpp  rvi_logger.cpp  rvi_state.cpp
src/: main.cpp  rvi.cpp  rvi_elf.cpp  rvi_state.cpp
tests/: CMakeLists.txt  README.md
tests/end_to_end/: Makefile  test_build.py  test_runner.py
tests/end_to_end/bit_count/: 1_config.txt  build_config.txt  test.cpp
tests/end_to_end/bit_rotation/: test.cpp
tests/end_to_end/bubble_sort/: 1_stdin.txt  1_stdout.txt  test.cpp
tests/end_to_end/echo/: 1_config.txt  test.cpp  (+2 more)
tests/given_task/: CMakeLists.txt
(+30 files in other folders)
